--- a/PersonalBudget_Api/pom.xml
+++ b/PersonalBudget_Api/pom.xml
@@ -21,29 +21,21 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
-
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-jpa</artifactId>
+		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
-			<groupId>PersonalBudget_Application</groupId>
-			<artifactId>PersonalBudget_Application</artifactId>
-			<version>0.0.1-SNAPSHOT</version>
-		</dependency>
-		<dependency>
-			<groupId>PersonalBudget_Crosscutting</groupId>
-			<artifactId>PersonalBudget_Crosscutting</artifactId>
-			<version>0.0.1-SNAPSHOT</version>
-		</dependency>
-		<dependency>
-			<groupId>PersonalBudget_Dto</groupId>
-			<artifactId>PersonalBudget_Dto</artifactId>
-			<version>0.0.1-SNAPSHOT</version>
+			<groupId>com.microsoft.sqlserver</groupId>
+			<artifactId>mssql-jdbc</artifactId>
+			<version>11.2.1.jre18</version>
 		</dependency>
 	</dependencies>
-
 	<build>
 		<plugins>
 			<plugin>
@@ -52,5 +44,4 @@
 			</plugin>
 		</plugins>
 	</build>
-
 </project>
